[tool.poetry]
name = "ec2grep"
version = "0.1.0"
description = "EC2 cli tool"
authors = ["Roey Berman <roey.berman@gmail.com>"]
keywords = ["ec2", "cli", "aws", "ssh"]

packages = [
    { include = "ec2grep" }
]

[tool.poetry.scripts]
ec2 = "ec2grep:cli"

[tool.poetry.dependencies]
python = "^2.7 || ^3.8"

boto3 = "^1.15.18"
click = "^7.1.2"

# Python 2 specific packages:
futures = { version = "3.3.0", python = "~2.7" }

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.1.3"]
build-backend = "poetry.masonry.api"
